# explorer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  renovate.json
backend/: alembic.ini  pyproject.toml
backend/migrations/: README  env.py
backend/migrations/versions/: 0001_sync_state.py  0002_core_tables.py  0003_mweb.py
backend/src/explorer/: __init__.py  __main__.py  chain.py  config.py  db.py  logging_setup.py  migrate.py  miner.py  rpc.py  tables.py  wallet.py
backend/src/explorer/api/: __init__.py  app.py  context.py  deps.py  downsample.py  legacy.py  models.py  money.py  mweb_flags.py  problems.py  routes.py  search.py  settings.py  sse.py
backend/src/explorer/indexer/: __init__.py  addresses.py  apply.py  fees.py  reorg.py  sync.py  zmq_sub.py
backend/tests/: conftest.py  helpers.py  test_addresses.py  test_api_app.py  test_api_downsample.py  test_api_integration.py  test_api_legacy.py  test_api_money.py  test_api_readonly.py  test_api_search.py  test_api_settings.py  test_api_sse.py  test_apply_mweb.py  test_apply_same_block.py  test_config.py  test_fees.py  test_integration_miner.py  test_integration_mweb.py  test_integration_reorg.py  test_integration_same_block.py  test_integration_sync.py  test_migrate.py  test_miner.py  test_mweb_activation.py  test_mweb_flags.py  test_reorg.py  test_rpc.py  test_sync_retry.py
deploy/: .env.prod.example  README.md  compose.dev.yml  compose.prod.yml
docs/: README.md
scripts/: prepare-public-rewrite.sh
web/: .gitignore  .tool-versions  next.config.ts  package.json  playwright.config.ts  (+3 more)
(+83 files in other folders)
