[project]
name = "explorer"
version = "0.1.0"
description = "Cyberyen Explorer backend (indexer + API)"
readme = "../README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pyzmq>=26.0",
]

[project.scripts]
explorer = "explorer.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/explorer"]

[tool.ruff]
target-version = "py314"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"
packages = ["explorer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "integration: tests that need compose (cyberyend-regtest + postgres)",
]

[tool.uv]
package = true
